# Decision-Theory---Fire-Evacuation

./: .gitignore  .~lock.presentation-MDP.odp#  FireEvac-MDP.ipynb  Q-Learning.ipynb  README.md  comparision.py  flake.nix  main.py  mdp-Copy1.py  mdp.py  play.py  presentation-MDP.odp  presentation.odp  pyproject.toml  test_sprites.py  train_q_learinng_agent.py  utilities.py
envs/: __init__.py  cat.py  constants.py  firefighter.py  grid.py  grid_world.py  sprites.py  utilities.py
envs/characters/: cat.py  firefighter.py
envs/tiles/: __init__.py  base.py  floor.py  item.py  tile.py  wall.py
envs/ui/: play_room.py  room.py  sprites.py  training_room.py  window.py
q_learning/: agent.py  constants.py  debug.py  metrics.py
web/: index.html
wrappers/: clip_reward.py  discrete_actions.py
